objects/ssot__Problem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssignedGroupId__c</fullName>
        <label>Assigned Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedUserId__c</fullName>
        <label>Assigned User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessEndDateTime__c</fullName>
        <label>Entitlement Process End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EntitlementProcessStartDateTime__c</fullName>
        <label>Entitlement Process Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Incident Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPaused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneStatusText__c</fullName>
        <label>Milestone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentProblemId__c</fullName>
        <label>Parent Problem</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PauseStartDateTime__c</fullName>
        <label>Pause Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PermanentSolutionDescription__c</fullName>
        <label>Permanent Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityOverrideReasonText__c</fullName>
        <label>Priority Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemCategory__c</fullName>
        <label>Problem Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemImpact__c</fullName>
        <label>Problem Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemNumber__c</fullName>
        <label>Problem Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemPriority__c</fullName>
        <label>Problem Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemResolutionStatus__c</fullName>
        <label>Problem Resolution Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemStatusCategory__c</fullName>
        <label>Problem Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemStatus__c</fullName>
        <label>Problem Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemSubCateogory__c</fullName>
        <label>Problem Sub Cateogory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemUrgency__c</fullName>
        <label>Problem Urgency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_OwnerId_map_UserGroup_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_OwnerId_map_UserGroup_Id_N_1</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>Problem_OwnerId_map_UserGroup_Id_N_1</relationshipLabel>
        <relationshipName>Problem_OwnerId_map_UserGroup_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Problem_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Problem_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Problem_ResolvedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_ResolvedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Problem_ResolvedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Problem_ResolvedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ReportedById__c</fullName>
        <label>Reported By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDateTime__c</fullName>
        <label>Resolution DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionSummaryText__c</fullName>
        <label>Resolution Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedById__c</fullName>
        <label>Resolved By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RootCauseSummaryText__c</fullName>
        <label>Root Cause Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEntitlementId__c</fullName>
        <label>Service Entitlement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectDescription__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WorkaroundDescription__c</fullName>
        <label>Workaround</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009442154_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem_ParentProblemId_map_Problem__rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>Problem_ParentProblemId_map_Problem__rel</relationshipLabel>
        <relationshipName>rel_1702009442154_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>